--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,50 @@
 .footer {
   display: flex;
   align-items: center;
-  margin: -0.5rem -3.5rem;
-  position: relative;
-  margin-top: -7rem;
-}
-.f-content {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  max-width: 1200px;
   width: 100%;
-  margin-top: 4rem;
-  gap: 4rem;
-  color: white;
+  margin: 2% auto 50px;
+  justify-content: space-between;
+  
 }
-.f-icons {
-  display: flex;
-  gap: 2rem;
+.b-top{
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
+.footer-img{
 
-@media screen and (max-width: 480px){
-  .f-content{
-    transform: scale(.5);
-  }
+}
+.footer-detail{
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #fff;
+  width: 50%;
+}
+.footer-right{
+  display: flex;
+  align-items: end;
+}
+.links-f{
+  width: 150px;
+}
+.s-route{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #fff;
+  padding-bottom: 8px;
+  cursor: pointer;
+}
+.s-route:hover{
+  color: #3fa45a;
+}
+.footer-sm{
+  display: flex;
+  align-items:center ;
+
+}
+.footer-icon{
+  margin-left: 25px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
