--- a/src/components/OurTeam/team.css
+++ b/src/components/OurTeam/team.css
@@ -184,5 +184,14 @@ a:hover{
     font-weight: 400;
     line-height: 20px;
     color: #dee2e6c7;
-    margin-top: 5px;
+    margin-top: 0px;
+}
+.team-name{
+   margin: 20px 0 0px 0;
+  text-transform: none;
+  color: #3fa45a;
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 1.5; 
+  font-size: 20px;
 }
