--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   justify-content: space-between;
   /* max-width: 1350px;
      width: 100%; */
-  margin: 80px auto;
+  margin: 75px auto;
 }
 
 .carousel.carousel-slider .control-arrow:hover{
@@ -55,9 +55,19 @@
 .carousel .carousel-status{
   display: none!important;
 }
+.carousel .thumbs-wrapper{
+  margin: 0;
+}
+
+
 @media screen and (max-width: 480px) {
   .App {
-    padding: 0.5rem 1rem;
+    /* padding: 0.5rem 1rem; */
 
+  }
+}
+@media screen and (max-width: 960px) {
+  .marquee {
+    margin: 75px auto 30px;
   }
 }
