--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -49,3 +49,37 @@
     width: 70px;
     height: 50px;
 }
+.mv-cont{
+    width: 65%;
+}
+@media (min-width:320px) and (max-width: 960px) {
+
+.mission
+{
+    display: flex;
+    flex-direction: column;
+}
+.vision{
+    display: flex;
+    flex-direction: column-reverse;
+}
+.mv-cont{
+    width: 95%;
+    margin: auto;
+}
+.quote{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.mv-para{
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+}
+.mv-img{
+    margin-top: 20px;
+}
+}
