--- a/src/components/Marquee/price.css
+++ b/src/components/Marquee/price.css
@@ -61,3 +61,25 @@
     font-weight: 600;
 
 }
+.marquee-img{
+    width: 70px;
+    height: 70px;
+}
+@media (min-width:320px) and (max-width: 960px) {
+    .singleCard {
+        width: 200px;
+    padding: 10px;
+    margin-left: 25px;
+    }
+    .c-Coinname{
+        font-size: 16px;
+    }
+    .c-name{
+        font-size: 18px;
+        padding-bottom: 5px;
+    }
+    .marquee-img{
+        width: 50px;
+        height: 50px;
+    }
+}
