--- a/src/components/OurTeam/team.css
+++ b/src/components/OurTeam/team.css
@@ -1,5 +1,3 @@
-
-
 h1,
 h2,
 h3,
@@ -16,20 +14,20 @@ h6 {
 
 a:link,
 a:active,
-a:visited{
-  color:rgba(255,255,255,1);
+a:visited {
+  color: rgba(255, 255, 255, 1);
 }
 
-a:hover{
-  color:rgba(255,255,255,0.6);
+a:hover {
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .gray {
   color: #a5a5a5;
 }
 
-.team{
-  margin:30px auto 40px;
+.team {
+  margin: 30px auto 40px;
   max-width: 1300px;
   width: 100%;
   padding-top: 70px;
@@ -37,11 +35,11 @@ a:hover{
 
 .team-member {
   margin: 15px 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .team-member figure {
@@ -103,24 +101,6 @@ a:hover{
   transition: all 0.3s ease-in-out;
 }
 
-.team-member figure:hover figcaption {
-  visibility: visible;
-  color: #fff;
-  background: #3fa45ad3;
-  /* Primary color, can be changed via colors.css */
-  
-  
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-    height: 74%;
-    width: 44%;
-}
-
-.team-member figure:hover figcaption ul li a:hover {
-  color: rgba(49, 49, 49, .97);
-}
 
 .team-member figure img {
   -webkit-transform: scale(1) rotate(0) translateY(0);
@@ -134,64 +114,92 @@ a:hover{
   transition: all 0.4s ease-in-out;
 }
 
-.team-member figure:hover img {
-  -webkit-transform: scale(1.1) rotate(1deg) translateY(12px);
-  -moz-transform: scale(1.1) rotate(1deg) translateY(12px);
-  -o-transform: scale(1.1) rotate(1deg) translateY(12px);
-  -ms-transform: scale(1.1) rotate(1deg) translateY(12px);
-  transform: scale(1.1) rotate(1deg) translateY(12px);
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-}
-.team-row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.team-member img{
-    width: 60%;
-    border-radius: 8px;
-}
-.cont{
-    width: 100%;
-}
-.img-cont{
-    width: 100%;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-}
-.team-head{
-    font-size: 42px;
-    font-weight: 700;
-    line-height: 32px;
-    margin-bottom: 25px;
-    color: #fff;
-}
-.team-para{
-    
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 34px;
-    color: #dee2e6c7;
+
+.team-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.designation{
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    color: #dee2e6c7;
-    margin-top: 0px;
+.team-member img {
+  width: 60%;
+  border-radius: 8px;
 }
-.team-name{
-   margin: 20px 0 0px 0;
+
+.cont {
+  width: 100%;
+}
+
+.img-cont {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.team-head {
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 32px;
+  margin-bottom: 25px;
+  color: #fff;
+}
+
+.team-para {
+
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 34px;
+  color: #dee2e6c7;
+}
+
+.designation {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #fff;
+  margin-top: 2px;
+  margin-bottom: 0;
+}
+
+.team-name {
+  margin: 20px 0 0px 0;
   text-transform: none;
   color: #3fa45a;
   font-weight: 600;
   letter-spacing: 1px;
-  line-height: 1.5; 
+  line-height: 1.5;
   font-size: 20px;
+}
+.li-bg{
+  background-color: #3fa45a;
+  padding: 5px 7px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+@media (min-width:320px) and (max-width: 960px) {
+
+  .team {
+    margin: 0px auto 40px;
+    width: 90%;
+    padding-top: 40px;
+  }
+
+  .team-head {
+    font-size: 29px;
+    line-height: 40px;
+    margin-bottom: 12px;
+  }
+  .team-para{
+    text-align: center;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .team-row{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
