--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -86,7 +86,7 @@ padding: 0 10px;
   width: 85%;
   /* height: 30vh; */
   position:absolute;
-  top:71px;
+  top:75px;
   left: 0 ;
   background: #31313A;
   border-radius: 10px;
@@ -106,4 +106,9 @@ padding: 0 10px;
   color: #fff;
   padding-bottom: 15px;
 }
+}
+@media screen and (min-width:960px) {
+  .nav-icon{
+    display: none;
+  }
 }
