--- a/src/components/Products/product.css
+++ b/src/components/Products/product.css
@@ -1,5 +1,5 @@
 .prod-sec {
-    max-width: 1350px;
+    max-width: 1300px;
     width: 100%;
     margin: auto auto 75px;
     position: relative;
@@ -13,12 +13,13 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     width: 90%;
-    margin: auto;
+    margin:30px auto 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 30px;
+    height: 550px;
 }
 
 .p-img {
@@ -93,6 +94,17 @@
 .floating-oval {
     position: absolute;
     top: 0;
+}
+.tmt-cta{
+    background-color: #3fa45a24;
+    color: #3fa45a;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 10px 18px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    margin-top: 25px;
 }
 
 @media (min-width:320px) and (max-width: 960px) {
