--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
   color: white;
   font-size: 16px;
   padding: 11px 26px 11px 26px;
-  box-shadow: rgb(62 115 98 / 65%) 2px 4px 15px;
+  /* box-shadow: rgb(62 115 98 / 65%) 2px 4px 15px; */
 
 }
 
