--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -7,18 +7,18 @@
 .intro-sec {
   max-width: 1350px;
   width: 100%;
-  margin: 100px auto 50px;
+  margin: 150px auto 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: vh;
+  height:70vh;
 }
 
 .logo-sq {
-  width: 65px;
-  height: 65px;
-  margin-bottom: 15px;
+  height: 100px;
+  margin-bottom: 8px;
   border-radius: 8px;
+
 }
 
 .intro-head {
