--- a/src/components/OurTeam/team.css
+++ b/src/components/OurTeam/team.css
@@ -155,8 +155,8 @@ a:hover {
 }
 
 .designation {
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 18px;
+  font-weight: 500;
   line-height: 20px;
   color: #fff;
   margin-top: 2px;
@@ -164,19 +164,27 @@ a:hover {
 }
 
 .team-name {
-  margin: 20px 0 0px 0;
+  margin: 30px 0 0px 0;
   text-transform: none;
   color: #3fa45a;
-  font-weight: 600;
+  font-weight: 700;
   letter-spacing: 1px;
-  line-height: 1.5;
-  font-size: 20px;
+  line-height: 20px;
+  font-size: 22px;
 }
 .li-bg{
   background-color: #3fa45a;
   padding: 5px 7px;
   border-radius: 50%;
   cursor: pointer;
+}
+.team-desc{
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #dee2e6c7;
+  text-align: center;
+  width: 75%;
 }
 @media (min-width:320px) and (max-width: 960px) {
 
