--- a/src/components/Products/product.css
+++ b/src/components/Products/product.css
@@ -138,6 +138,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
+    height: fit-content;
 }
 .p-heading{
     font-size: 28px;
