--- a/src/components/OurTeam/team.css
+++ b/src/components/OurTeam/team.css
@@ -123,7 +123,14 @@ a:hover {
 }
 
 .team-member img {
+ 
+}
+.img-responsive2{
   width: 60%;
+  border-radius: 8px;
+}
+.img-responsive1{
+  width: 47%;
   border-radius: 8px;
 }
 
